Design facebook login

--- a/index.Html
+++ b/index.Html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
+  <header></header>
   <div class="container-fluid">
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="pt-3">
-            <!--padding-->
+          <div class="col-logo">
             <img src="images/sloganfacebook.svg" alt="Sogan facebook" class="img mt-2" />
-            <h3 class="ml-5 mt-3">
+            <h3 class="ml-5">
               Facebook te ayuda a comunicarte y compartir con las personas que
               forman parte de tu vida.
             </h3>
@@ -36,26 +36,27 @@
                     placeholder="Contraseña" required />
                 </div>
                 <button id="btn-env" type="submit" class="btn btn-primary">
-                  <b>Entrar</b>
+                  <b>Iniciar sesión</b>
                 </button>
                 <div class="container-password">
-                  <a id="link" href="">¿Has olvidado la contraseña?</a>
+                  <a id="link" href="#">¿Olvidaste tu contraseña?</a>
                 </div>
-                <hr class="line-part" />
+                <div class="line-part"></div>
                 <button class="btn-newaccount btn btn-primary">
                   <b class="text-btn">Crear nueva cuenta</b>
                 </button>
               </form>
             </div>
             <div class="text-per">
-              <span><b>Crea una página</b> para un famoso, una marca o una
-                empresa.</span>
+              <span><b>Crea una página</b> para una celebridad, una marca o un negocio.</span>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <footer></footer>
+
 </body>
 
 </html>
